Fix layout break

--- a/src/css/_partial/post.styl
+++ b/src/css/_partial/post.styl
@@ -83,18 +83,17 @@
     
 .post-footer
   width 100%
-  height 160px
+  height 220px
   position relative
   border 1px solid  $line-clr
   border-radius 4px
   display flex 
   justify-content space-between 
   align-items center
-  padding 26px 14px
+  padding 26px 12px
   margin-bottom 4rem 
-  margin-bttom 8rem
   text-align right 
-  box-sizing content-box
+  box-sizing border-box
   & > div
     width 50%
     height 100%   
